--- a/UI_units/ui_window.ui
+++ b/UI_units/ui_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>616</width>
-    <height>412</height>
+    <width>800</width>
+    <height>614</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,104 +15,8 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="1">
-     <layout class="QHBoxLayout" name="horizontalLayout_7">
-      <item>
-       <widget class="QToolButton" name="undo_button_item">
-        <property name="cursor">
-         <cursorShape>ForbiddenCursor</cursorShape>
-        </property>
-        <property name="focusPolicy">
-         <enum>Qt::ClickFocus</enum>
-        </property>
-        <property name="text">
-         <string>&lt;-</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="redo_button_item">
-        <property name="cursor">
-         <cursorShape>ForbiddenCursor</cursorShape>
-        </property>
-        <property name="focusPolicy">
-         <enum>Qt::ClickFocus</enum>
-        </property>
-        <property name="text">
-         <string>-&gt;</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item row="1" column="0">
-     <layout class="QHBoxLayout" name="horizontalLayout_6">
-      <item>
-       <widget class="QToolButton" name="import_button_item">
-        <property name="cursor">
-         <cursorShape>ForbiddenCursor</cursorShape>
-        </property>
-        <property name="focusPolicy">
-         <enum>Qt::ClickFocus</enum>
-        </property>
-        <property name="text">
-         <string>Import .json</string>
-        </property>
-        <property name="icon">
-         <iconset>
-          <normaloff>images/monster.png</normaloff>images/monster.png</iconset>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QToolButton" name="trans_button_item">
-        <property name="cursor">
-         <cursorShape>ForbiddenCursor</cursorShape>
-        </property>
-        <property name="focusPolicy">
-         <enum>Qt::ClickFocus</enum>
-        </property>
-        <property name="text">
-         <string>New Transformation</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item row="1" column="5">
-     <widget class="QToolButton" name="save_button_item">
-      <property name="cursor">
-       <cursorShape>ForbiddenCursor</cursorShape>
-      </property>
-      <property name="focusPolicy">
-       <enum>Qt::ClickFocus</enum>
-      </property>
-      <property name="text">
-       <string>Save</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="2">
-     <spacer name="horizontalSpacer">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="2" column="0" colspan="6">
+    <item row="0" column="0">
      <widget class="QFrame" name="frame">
-      <property name="cursor">
-       <cursorShape>WaitCursor</cursorShape>
-      </property>
-      <property name="focusPolicy">
-       <enum>Qt::ClickFocus</enum>
-      </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
@@ -128,7 +32,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>616</width>
+     <width>800</width>
      <height>22</height>
     </rect>
    </property>
@@ -136,9 +40,15 @@
     <property name="title">
      <string>AnimDNA</string>
     </property>
+    <widget class="QMenu" name="menuRecent">
+     <property name="title">
+      <string>Recent</string>
+     </property>
+     <addaction name="actionSmiley_json"/>
+     <addaction name="actionSmiley_with_teeth_json"/>
+    </widget>
+    <addaction name="menuRecent"/>
     <addaction name="actionAbout"/>
-    <addaction name="separator"/>
-    <addaction name="actionRecent_files"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -151,24 +61,29 @@
     <property name="title">
      <string>Preference</string>
     </property>
-    <addaction name="actionFont"/>
    </widget>
    <addaction name="menuAnimDNA"/>
    <addaction name="menuPreference"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>true</bool>
+   </attribute>
+   <addaction name="separator"/>
+   <addaction name="actionOpen"/>
+   <addaction name="actionSave"/>
+  </widget>
   <action name="actionRecent_File">
    <property name="text">
     <string>Preference</string>
-   </property>
-  </action>
-  <action name="actionAbout">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="text">
-    <string>About</string>
    </property>
   </action>
   <action name="actionDocumentation">
@@ -181,17 +96,19 @@
     <string>Report a problem</string>
    </property>
   </action>
-  <action name="actionDd">
-   <property name="text">
-    <string>dd</string>
-   </property>
-  </action>
-  <action name="actionRecent_files">
-   <property name="checkable">
-    <bool>true</bool>
+  <action name="actionOpen">
+   <property name="icon">
+    <iconset resource="images/OpenIcon.qrc">
+     <normaloff>:/Live_Mail_Icon/Live Mail.ico</normaloff>:/Live_Mail_Icon/Live Mail.ico</iconset>
    </property>
    <property name="text">
-    <string>Recent files</string>
+    <string>Open</string>
+   </property>
+   <property name="toolTip">
+    <string>Import .json file</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
    </property>
   </action>
   <action name="actionFont">
@@ -199,7 +116,42 @@
     <string>Font</string>
    </property>
   </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="icon">
+    <iconset resource="images/SaveIcon.qrc">
+     <normaloff>:/save/489751-Floppy_Disk-128.png</normaloff>:/save/489751-Floppy_Disk-128.png</iconset>
+   </property>
+   <property name="text">
+    <string>Save</string>
+   </property>
+   <property name="toolTip">
+    <string>Export .json</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="actionSmiley_json">
+   <property name="text">
+    <string>smiley.json</string>
+   </property>
+  </action>
+  <action name="actionSmiley_with_teeth_json">
+   <property name="text">
+    <string>smiley_with_teeth.json</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="images/OpenIcon.qrc"/>
+  <include location="images/UndoIcon.qrc"/>
+  <include location="images/RedoIcon.qrc"/>
+  <include location="images/SaveIcon.qrc"/>
+ </resources>
  <connections/>
 </ui>
