--- a/UI_units/ui_window.ui
+++ b/UI_units/ui_window.ui
@@ -31,17 +31,13 @@
    </property>
    <widget class="QMenu" name="menuAnimDNA">
     <property name="title">
-     <string>AnimDNA</string>
+     <string>File</string>
     </property>
-    <widget class="QMenu" name="menuRecent">
-     <property name="title">
-      <string>Recent</string>
-     </property>
-     <addaction name="actionSmiley_json"/>
-     <addaction name="actionSmiley_with_teeth_json"/>
-    </widget>
-    <addaction name="menuRecent"/>
-    <addaction name="actionAbout"/>
+    <addaction name="actionRecent"/>
+    <addaction name="actionRecent_2"/>
+    <addaction name="separator"/>
+    <addaction name="actionSave_2"/>
+    <addaction name="actionSave_As"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -52,8 +48,10 @@
    </widget>
    <widget class="QMenu" name="menuPreference">
     <property name="title">
-     <string>Preference</string>
+     <string>Edit</string>
     </property>
+    <addaction name="actionEdit"/>
+    <addaction name="actionRedo"/>
    </widget>
    <addaction name="menuAnimDNA"/>
    <addaction name="menuPreference"/>
@@ -73,6 +71,7 @@
    <addaction name="separator"/>
    <addaction name="actionOpen"/>
    <addaction name="actionSave"/>
+   <addaction name="actionAnalyze_structure"/>
   </widget>
   <widget class="QToolBar" name="path_toolbar">
    <property name="windowTitle">
@@ -85,6 +84,7 @@
     <bool>false</bool>
    </attribute>
    <addaction name="actionSelect"/>
+   <addaction name="actionRip_off"/>
   </widget>
   <action name="actionRecent_File">
    <property name="text">
@@ -110,15 +110,10 @@
     <string>Open</string>
    </property>
    <property name="toolTip">
-    <string>Import .json file</string>
+    <string>import .json</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
-   </property>
-  </action>
-  <action name="actionFont">
-   <property name="text">
-    <string>Font</string>
    </property>
   </action>
   <action name="actionAbout">
@@ -135,7 +130,7 @@
     <string>Save</string>
    </property>
    <property name="toolTip">
-    <string>Export .json</string>
+    <string>write .json</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
@@ -152,20 +147,92 @@
    </property>
   </action>
   <action name="actionSelect">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="icon">
     <iconset resource="images/SelectIcon.qrc">
-     <normaloff>:/select_icon/Undo-icon.png</normaloff>:/select_icon/Undo-icon.png</iconset>
+     <normaloff>:/select_icon/click.png</normaloff>:/select_icon/click.png</iconset>
    </property>
    <property name="text">
     <string>select</string>
+   </property>
+   <property name="toolTip">
+    <string>select staple strand to operate</string>
    </property>
    <property name="shortcut">
     <string>Shift+S</string>
    </property>
   </action>
+  <action name="actionEdit">
+   <property name="text">
+    <string>Undo</string>
+   </property>
+  </action>
+  <action name="actionRedo">
+   <property name="text">
+    <string>Redo</string>
+   </property>
+  </action>
+  <action name="actionRecent">
+   <property name="text">
+    <string>Open</string>
+   </property>
+  </action>
+  <action name="actionRecent_2">
+   <property name="text">
+    <string>Recent</string>
+   </property>
+  </action>
+  <action name="actionSave_2">
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actionSave_As">
+   <property name="text">
+    <string>Save As...</string>
+   </property>
+  </action>
+  <action name="actionPrint">
+   <property name="text">
+    <string>Print</string>
+   </property>
+  </action>
+  <action name="actionAnalyze_structure">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="images/TransformaitonIcon.qrc">
+     <normaloff>:/dna/transformation.png</normaloff>:/dna/transformation.png</iconset>
+   </property>
+   <property name="text">
+    <string>Analyze structure</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+A</string>
+   </property>
+  </action>
+  <action name="actionRip_off">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="images/TransformaitonIcon.qrc">
+     <normaloff>:/rip_off/rip_off.png</normaloff>:/rip_off/rip_off.png</iconset>
+   </property>
+   <property name="text">
+    <string>rip off</string>
+   </property>
+   <property name="toolTip">
+    <string>rip off selected strand</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="images/OpenIcon.qrc"/>
+  <include location="images/TransformaitonIcon.qrc"/>
   <include location="images/UndoIcon.qrc"/>
   <include location="images/RedoIcon.qrc"/>
   <include location="images/SaveIcon.qrc"/>
