--- a/UI_units/rip_off_dialog.ui
+++ b/UI_units/rip_off_dialog.ui
@@ -14,10 +14,7 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QListView" name="listView"/>
-   </item>
-   <item row="0" column="2">
+   <item row="0" column="1">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -26,6 +23,9 @@
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QListWidget" name="listWidget"/>
    </item>
   </layout>
  </widget>
