--- a/bin/ui_window.ui
+++ b/bin/ui_window.ui
@@ -6,26 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>614</height>
+    <width>1037</width>
+    <height>797</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QGraphicsView" name="renderView"/>
-    </item>
-   </layout>
+   <layout class="QGridLayout" name="gridLayout"/>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1037</width>
      <height>22</height>
     </rect>
    </property>
@@ -71,20 +67,7 @@
    <addaction name="separator"/>
    <addaction name="actionOpen"/>
    <addaction name="actionSave"/>
-   <addaction name="actionAnalyze_structure"/>
-  </widget>
-  <widget class="QToolBar" name="path_toolbar">
-   <property name="windowTitle">
-    <string>toolBar_2</string>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>RightToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="actionSelect"/>
-   <addaction name="actionRip_off"/>
+   <addaction name="actionCreate_toehold"/>
   </widget>
   <action name="actionRecent_File">
    <property name="text">
@@ -103,7 +86,7 @@
   </action>
   <action name="actionOpen">
    <property name="icon">
-    <iconset resource="images/OpenIcon.qrc">
+    <iconset>
      <normaloff>:/Live_Mail_Icon/Live Mail.ico</normaloff>:/Live_Mail_Icon/Live Mail.ico</iconset>
    </property>
    <property name="text">
@@ -123,7 +106,7 @@
   </action>
   <action name="actionSave">
    <property name="icon">
-    <iconset resource="images/SaveIcon.qrc">
+    <iconset>
      <normaloff>:/save/489751-Floppy_Disk-128.png</normaloff>:/save/489751-Floppy_Disk-128.png</iconset>
    </property>
    <property name="text">
@@ -151,7 +134,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="images/SelectIcon.qrc">
+    <iconset>
      <normaloff>:/select_icon/click.png</normaloff>:/select_icon/click.png</iconset>
    </property>
    <property name="text">
@@ -199,19 +182,19 @@
     <string>Print</string>
    </property>
   </action>
-  <action name="actionAnalyze_structure">
+  <action name="actionCreate_toehold">
    <property name="checkable">
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset resource="images/TransformaitonIcon.qrc">
+    <iconset>
      <normaloff>:/dna/transformation.png</normaloff>:/dna/transformation.png</iconset>
    </property>
    <property name="text">
-    <string>Analyze structure</string>
+    <string>create_toehold</string>
    </property>
-   <property name="shortcut">
-    <string>Ctrl+A</string>
+   <property name="toolTip">
+    <string>create toehold</string>
    </property>
   </action>
   <action name="actionRip_off">
@@ -219,7 +202,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="images/TransformaitonIcon.qrc">
+    <iconset>
      <normaloff>:/rip_off/rip_off.png</normaloff>:/rip_off/rip_off.png</iconset>
    </property>
    <property name="text">
@@ -231,7 +214,6 @@
   </action>
  </widget>
  <resources>
-  <include location="images/OpenIcon.qrc"/>
   <include location="images/TransformaitonIcon.qrc"/>
   <include location="images/UndoIcon.qrc"/>
   <include location="images/RedoIcon.qrc"/>
