--- a/bin/ui_window.ui
+++ b/bin/ui_window.ui
@@ -29,24 +29,24 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionRecent"/>
+    <addaction name="actionOpen"/>
     <addaction name="actionRecent_2"/>
     <addaction name="separator"/>
-    <addaction name="actionSave_2"/>
+    <addaction name="actionSave"/>
     <addaction name="actionSave_As"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
      <string>Help</string>
     </property>
-    <addaction name="actionDocumentation"/>
+    <addaction name="actionAbout"/>
     <addaction name="actionReport_an_error"/>
    </widget>
    <widget class="QMenu" name="menuPreference">
     <property name="title">
      <string>Edit</string>
     </property>
-    <addaction name="actionEdit"/>
+    <addaction name="actionUndo"/>
     <addaction name="actionRedo"/>
    </widget>
    <addaction name="menuAnimDNA"/>
@@ -67,6 +67,7 @@
    <addaction name="separator"/>
    <addaction name="actionOpen"/>
    <addaction name="actionSave"/>
+   <addaction name="separator"/>
    <addaction name="actionCreate_toehold"/>
   </widget>
   <action name="actionRecent_File">
@@ -156,6 +157,9 @@
    <property name="text">
     <string>Redo</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
+   </property>
   </action>
   <action name="actionRecent">
    <property name="text">
@@ -210,6 +214,14 @@
    </property>
    <property name="toolTip">
     <string>rip off selected strand</string>
+   </property>
+  </action>
+  <action name="actionUndo">
+   <property name="text">
+    <string>Undo</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Z</string>
    </property>
   </action>
  </widget>
