actionMerge_domain added; can merge any two consecutive domain, with or w/o toehold attached. Issues: can't undo/redo -- need to create separate command; can't delete toehold after merging two domains w/ toeholds attached; need to add constraints to accept action only for two consecutive domains

--- a/bin/ui_window.ui
+++ b/bin/ui_window.ui
@@ -73,6 +73,7 @@
    <addaction name="actionRemove_toehold"/>
    <addaction name="separator"/>
    <addaction name="actionRip_off"/>
+   <addaction name="actionMerge_domain"/>
   </widget>
   <action name="actionRecent_File">
    <property name="text">
@@ -238,6 +239,11 @@
    </property>
    <property name="toolTip">
     <string>rip off strand</string>
+   </property>
+  </action>
+  <action name="actionMerge_domain">
+   <property name="text">
+    <string>merge_domain</string>
    </property>
   </action>
  </widget>
