--- a/UI_units/ui_window.ui
+++ b/UI_units/ui_window.ui
@@ -6,26 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>614</height>
+    <width>914</width>
+    <height>680</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QGraphicsView" name="renderView"/>
-    </item>
-   </layout>
+   <layout class="QGridLayout" name="gridLayout"/>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>914</width>
      <height>22</height>
     </rect>
    </property>
@@ -33,24 +29,24 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionRecent"/>
+    <addaction name="actionOpen"/>
     <addaction name="actionRecent_2"/>
     <addaction name="separator"/>
-    <addaction name="actionSave_2"/>
+    <addaction name="actionSave"/>
     <addaction name="actionSave_As"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
      <string>Help</string>
     </property>
-    <addaction name="actionDocumentation"/>
+    <addaction name="actionAbout"/>
     <addaction name="actionReport_an_error"/>
    </widget>
    <widget class="QMenu" name="menuPreference">
     <property name="title">
      <string>Edit</string>
     </property>
-    <addaction name="actionEdit"/>
+    <addaction name="actionUndo"/>
     <addaction name="actionRedo"/>
    </widget>
    <addaction name="menuAnimDNA"/>
@@ -71,20 +67,13 @@
    <addaction name="separator"/>
    <addaction name="actionOpen"/>
    <addaction name="actionSave"/>
-   <addaction name="actionAnalyze_structure"/>
-  </widget>
-  <widget class="QToolBar" name="path_toolbar">
-   <property name="windowTitle">
-    <string>toolBar_2</string>
-   </property>
-   <attribute name="toolBarArea">
-    <enum>RightToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="actionSelect"/>
+   <addaction name="separator"/>
+   <addaction name="actionCreate_toehold"/>
+   <addaction name="actionResize_toehold"/>
+   <addaction name="actionRemove_toehold"/>
+   <addaction name="separator"/>
    <addaction name="actionRip_off"/>
+   <addaction name="actionMerge_domain"/>
   </widget>
   <action name="actionRecent_File">
    <property name="text">
@@ -103,7 +92,7 @@
   </action>
   <action name="actionOpen">
    <property name="icon">
-    <iconset resource="images/OpenIcon.qrc">
+    <iconset>
      <normaloff>:/Live_Mail_Icon/Live Mail.ico</normaloff>:/Live_Mail_Icon/Live Mail.ico</iconset>
    </property>
    <property name="text">
@@ -123,7 +112,7 @@
   </action>
   <action name="actionSave">
    <property name="icon">
-    <iconset resource="images/SaveIcon.qrc">
+    <iconset>
      <normaloff>:/save/489751-Floppy_Disk-128.png</normaloff>:/save/489751-Floppy_Disk-128.png</iconset>
    </property>
    <property name="text">
@@ -151,7 +140,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="images/SelectIcon.qrc">
+    <iconset>
      <normaloff>:/select_icon/click.png</normaloff>:/select_icon/click.png</iconset>
    </property>
    <property name="text">
@@ -172,6 +161,9 @@
   <action name="actionRedo">
    <property name="text">
     <string>Redo</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
    </property>
   </action>
   <action name="actionRecent">
@@ -199,42 +191,63 @@
     <string>Print</string>
    </property>
   </action>
-  <action name="actionAnalyze_structure">
+  <action name="actionCreate_toehold">
    <property name="checkable">
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset resource="images/TransformaitonIcon.qrc">
+    <iconset>
      <normaloff>:/dna/transformation.png</normaloff>:/dna/transformation.png</iconset>
    </property>
    <property name="text">
-    <string>Analyze structure</string>
+    <string>create_toehold</string>
+   </property>
+   <property name="toolTip">
+    <string>create toehold</string>
+   </property>
+  </action>
+  <action name="actionUndo">
+   <property name="text">
+    <string>Undo</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+A</string>
+    <string>Ctrl+Z</string>
+   </property>
+  </action>
+  <action name="actionResize_toehold">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>resize toehold</string>
+   </property>
+   <property name="toolTip">
+    <string>Change the length of a selected toehold</string>
+   </property>
+  </action>
+  <action name="actionRemove_toehold">
+   <property name="text">
+    <string>remove toehold</string>
+   </property>
+   <property name="toolTip">
+    <string>remove selected toehold</string>
    </property>
   </action>
   <action name="actionRip_off">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="icon">
-    <iconset resource="images/TransformaitonIcon.qrc">
-     <normaloff>:/rip_off/rip_off.png</normaloff>:/rip_off/rip_off.png</iconset>
-   </property>
    <property name="text">
-    <string>rip off</string>
+    <string>rip_off</string>
    </property>
    <property name="toolTip">
-    <string>rip off selected strand</string>
+    <string>rip off strand</string>
+   </property>
+  </action>
+  <action name="actionMerge_domain">
+   <property name="text">
+    <string>merge_domain</string>
    </property>
   </action>
  </widget>
  <resources>
-  <include location="images/OpenIcon.qrc"/>
-  <include location="images/TransformaitonIcon.qrc"/>
-  <include location="images/UndoIcon.qrc"/>
-  <include location="images/RedoIcon.qrc"/>
   <include location="images/SaveIcon.qrc"/>
   <include location="images/SelectIcon.qrc"/>
  </resources>
